--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
   <name>CARDS for $PROJECT_NAME$</name>
   <description>A CARDS based project.</description>
 
+  <scm>
+    <connection>scm:git:git://github.com/data-team-uhn/$PROJECT_SHORTNAME$.git</connection>
+    <developerConnection>scm:git:git@github.com:data-team-uhn/$PROJECT_SHORTNAME$.git</developerConnection>
+    <url>https://github.com/data-team-uhn/$PROJECT_SHORTNAME$/tree/master/</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <repositories>
     <repository>
       <id>local-generic-cards</id>
