--- a/pom.xml
+++ b/pom.xml
@@ -58,4 +58,18 @@
     <module>feature</module>
     <module>docker</module>
   </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <arguments>-Pquick</arguments>
+          <preparationGoals>clean verify</preparationGoals>
+          <tagNameFormat>$PROJECT_SHORTNAME$-@{project.version}</tagNameFormat>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
