[misc] Maven property values are computed in each project, so we must hardcode the cards.version property

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
     </repository>
   </repositories>
 
+  <properties>
+    <cards.version>$CARDS_VERSION$</cards.version>
+  </properties>
+
   <modules>
     <module>backend</module>
     <module>resources</module>
