Only generate the sling-features.json file, no need for a separate flat .dependencies file

--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -53,8 +53,31 @@
             </goals>
             <configuration>
               <resourceBundles>
-                <resourceBundle>io.uhndata.cards:cards-project-dependencies-resources:2</resourceBundle>
+                <resourceBundle>io.uhndata.cards:cards-project-dependencies-resources:3</resourceBundle>
               </resourceBundles>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.5.0</version>
+        <executions>
+          <execution>
+            <id>attach-artifacts</id>
+            <phase>package</phase>
+            <goals>
+              <goal>attach-artifact</goal>
+            </goals>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>${project.build.directory}/maven-shared-archive-resources/sling-features.json</file>
+                  <type>dependencies</type>
+                </artifact>
+              </artifacts>
             </configuration>
           </execution>
         </executions>
