--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -147,7 +147,7 @@
             <executions>
               <execution>
                 <id>build</id>
-                <phase>install</phase>
+                <phase>package</phase>
                 <goals>
                   <goal>build</goal>
                 </goals>
